--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f9a61b9e",
+   "metadata": {},
+   "source": [
+    "# Control\n",
+    "\n",
+    "\n",
+    "- Contiene una colección de notebooks de [Jupyter](https://jupyter.org/) con notas y ejemplos con el contenido propuesto para los cursos **Control análogo** y **Control digital**.\n",
+    "\n",
+    "- Estas notas fueron escritas por [Jean Pierre DÍAZ-PAZ](https://www.ecoprofe.com/JPDP).\n",
+    "\n",
+    "- Los notebooks contienen código en [IPython 3](http://ipython.org/).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "397b94ff",
    "metadata": {},
    "source": [
