--- a/CaracterizacionLTI.ipynb
+++ b/CaracterizacionLTI.ipynb
@@ -25,7 +25,10 @@
    "source": [
     "## Respuesta al impulso\n",
     "\n",
-    "A continuación se discutirá sobre la respuesta $y(t)$ de un sistema $\\mathcal{H}$, Lineal e Invariante en el Tiempo (LTI), ante una señal de entrada $x(t)$. \n",
+    "A continuación se discutirá sobre la respuesta $y(t)$, de un sistema $\\mathcal{H}$ que es  LTI, ante una señal de entrada $x(t)$. \n",
+    "\n",
+    "![bloque](figuras/bloque_tiempo.PNG)\n",
+    "\n",
     "\n",
     "Tenga en cuenta que la señal de entrada puede representarse como una integral:\n",
     "\n",
@@ -66,7 +69,11 @@
     "\n",
     "Esta operación es conocida como [*convolución*](https://en.wikipedia.org/wiki/Convolution). Se simboliza mediante $*$, de manera que la integral se represente como $y(t) = x(t) * h(t)$ o, para algunos autores, $y(t) = (x*h)(t)$.\n",
     "\n",
-    "La respuesta $y(t)$ de un sistema LTI \\mathcal{H} ante una entrada $x(t)$ se determina completamente a partir de su respuesta impulsional $h(t)$ como la convolución de la entrada $x(t)$ con la respuesta impulsional $h(t)$.\n"
+    "La respuesta $y(t)$ de un sistema LTI $\\mathcal{H}$ ante una entrada $x(t)$ se determina completamente a partir de su respuesta impulsional $h(t)$ como la convolución de la entrada $x(t)$ con la respuesta impulsional $h(t)$.\n",
+    "\n",
+    "\\begin{equation}\n",
+    "y(t) = x(t)*h(t)\n",
+    "\\end{equation}\n"
    ]
   },
   {
@@ -80,7 +87,10 @@
     "y(t) + \\frac{d}{dt} y(t) = x(t)\n",
     "\\end{equation}\n",
     "\n",
-    "Se desea encontrar la respuesta del sistema ante una entrada $x(t) = e^{- 2 t} \\cdot \\epsilon(t)$\n"
+    "![bloque](figuras/bloque_tiempo.PNG)\n",
+    "\n",
+    "\n",
+    "Se desea encontrar la respuesta del sistema ante una entrada $x(t) = 1 \\cdot \\epsilon(t)$\n"
    ]
   },
   {
@@ -90,7 +100,11 @@
     "### Solución A\n",
     "Primero, se va a resolver la ODE teniendo en cuenta  que deben satisfacerse las condiciones iniciales $y(t)\\big\\vert_{t = 0-} = 0$ y $\\frac{d}{dt}y(t)\\big\\vert_{t = 0-} = 0$ relacionadas con la causalidad.\n",
     "\n",
-    "a. Defina la ODE en`SymPy`"
+    "a. Defina la ODE en`SymPy`\n",
+    "\n",
+    "\\begin{equation}\n",
+    "y(t) + \\frac{d}{dt} y(t) = x(t)\n",
+    "\\end{equation}"
    ]
   },
   {
