--- a/EjercicioCircuito.ipynb
+++ b/EjercicioCircuito.ipynb
@@ -32,7 +32,10 @@
    "source": [
     "**Respuesta**\n",
     "\n",
-    "Desarrolle sus procedimientos"
+    "Desarrolle sus procedimientos\n",
+    "\n",
+    "$$ v_{ca}(t) = v_{cb}(t)+v_{rb}(t) $$\n",
+    "$$ x = v_{ra}(t) + v_{cb}(t)+v_{rb}(t) $$"
    ]
   },
   {
