--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -28,7 +28,8 @@
     "- [Señales Estándar](SenalesEstandar.ipynb)\n",
     "- [Caracterización de Sistemas LTI en el Dominio del Tiempo](CaracterizacionLTI.ipynb)\n",
     "- [Modelo dinámico de un circuito RLC](CircuitoRLC.ipynb)\n",
-    "- [Ejercicio: Análisis de un circuito con almacenamiento de energía](EjercicioCircuito.ipynb)"
+    "- [Ejercicio: Análisis de un circuito con almacenamiento de energía](EjercicioCircuito.ipynb)\n",
+    "- [Bucla de control en tiempo continuo](Bucle_control.ipynb)\n"
    ]
   },
   {
@@ -38,8 +39,7 @@
    "source": [
     "## 1  Control en tiempo continuo\n",
     "\n",
-    "- [Bucla de control en tiempo continuo]()\n",
-    "- [Generalidades de la transformada de Laplace]()\n",
+    "- [Generalidades de la transformada de Laplace](Transformada_Laplace.ipynb)\n",
     "- [Estabilidad]()\n",
     "- [Lugar geométrico de las raíces]()\n",
     "- [Criterio de Routh]()\n",
