--- a/Transformada_Laplace.ipynb
+++ b/Transformada_Laplace.ipynb
@@ -32705,7 +32705,7 @@
     "\n",
     "Considere el siguiente circuito suponiendo valores iniciales iguales a cero.\n",
     "\n",
-    "![Circuit of a 2nd-order analog low-pass filter](lowpass.png)\n",
+    "![Circuit of a 2nd-order analog low-pass filter](figlowpass.png)\n",
     "\n",
     "Para ilustrar, considere que $L = 0.5$, $R = 1$, $C = 0.4$ .\n",
     "\n",
@@ -32751,7 +32751,7 @@
     "\n",
     "Observe que el circuito puede transformarse al dominio de Laplace directamente.\n",
     "\n",
-    "![Equivalent network in the Laplace domain](lowpass_laplace_domain.png)\n",
+    "![Equivalent network in the Laplace domain](figuras/lowpass_laplace_domain.png)\n",
     "\n",
     "\n",
     "\n",
