nuevas figuras y actualizacion de diagramas

--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -40,6 +40,7 @@
     "## 1  Control en tiempo continuo\n",
     "\n",
     "- [Generalidades de la transformada de Laplace](Transformada_Laplace.ipynb)\n",
+    "- [Diagramas de bloques](Diagramas_bloques.ipynb)\n",
     "- [Estabilidad]()\n",
     "- [Lugar geométrico de las raíces]()\n",
     "- [Criterio de Routh]()\n",
