--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -5,9 +5,9 @@
    "id": "f9a61b9e",
    "metadata": {},
    "source": [
+    "Control\n",
+    "=============\n",
     "# Control\n",
-    "\n",
-    "\n",
     "- Contiene una colección de notebooks de [Jupyter](https://jupyter.org/) con notas y ejemplos con el contenido propuesto para los cursos **Control análogo** y **Control digital**.\n",
     "\n",
     "- Estas notas fueron escritas por [Jean Pierre DÍAZ-PAZ](https://www.ecoprofe.com/JPDP).\n",
@@ -27,9 +27,22 @@
     "- [Ejercicio: Análisis de un circuito con Sympy](EjercicioSympy.ipynb)\n",
     "- [Señales Estándar](SenalesEstandar.ipynb)\n",
     "- [Caracterización de Sistemas LTI en el Dominio del Tiempo](CaracterizacionLTI.ipynb)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c4d05a7",
+   "metadata": {},
+   "source": [
+    "## 1  Modelos dinámicos en tiempo continuo\n",
+    "\n",
     "- [Modelo dinámico de un circuito RLC](CircuitoRLC.ipynb)\n",
     "- [Ejercicio: Análisis de un circuito con almacenamiento de energía](EjercicioCircuito.ipynb)\n",
-    "- [Bucla de control en tiempo continuo](Bucle_control.ipynb)\n"
+    "- [Generalidades de la transformada de Laplace](Transformada_Laplace.ipynb)\n",
+    "- [Respuesta dinámica](RespuestaDinamica.ipynb)\n",
+    "- [Simulación de funciones de transferencia arbitrarias](Simulacion.ipynb)\n",
+    "- [Identificación de sistemas](Identificacion.ipynb)"
    ]
   },
   {
@@ -39,7 +52,7 @@
    "source": [
     "## 1  Control en tiempo continuo\n",
     "\n",
-    "- [Generalidades de la transformada de Laplace](Transformada_Laplace.ipynb)\n",
+    "- [Bucle de control en tiempo continuo](Bucle_control.ipynb)\n",
     "- [Diagramas de bloques](Diagramas_bloques.ipynb)\n",
     "- [Estabilidad]()\n",
     "- [Lugar geométrico de las raíces]()\n",
