--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "- [Bucle de control en tiempo continuo](Bucle_control.ipynb)\n",
     "- [Diagramas de bloques](Diagramas_bloques.ipynb)\n",
-    "- [Estabilidad]()\n",
+    "- [Efectos de la realimentación](EfectosLazoCerrado.ipynb)\n",
     "- [Lugar geométrico de las raíces]()\n",
     "- [Criterio de Routh]()\n",
     "- [Diseño de controladores]()\n"
