--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -55,7 +55,7 @@
     "- [Bucle de control en tiempo continuo](Bucle_control.ipynb)\n",
     "- [Diagramas de bloques](Diagramas_bloques.ipynb)\n",
     "- [Efectos de la realimentación](EfectosLazoCerrado.ipynb)\n",
-    "- [Lugar geométrico de las raíces]()\n",
+    "- [Lugar geométrico de las raíces](LGDR.ipynb)\n",
     "- [Criterio de Routh]()\n",
     "- [Diseño de controladores]()\n"
    ]
