--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -56,7 +56,7 @@
     "- [Diagramas de bloques](Diagramas_bloques.ipynb)\n",
     "- [Efectos de la realimentación](EfectosLazoCerrado.ipynb)\n",
     "- [Lugar geométrico de las raíces](LGDR.ipynb)\n",
-    "- [Criterio de Routh]()\n",
+    "- [Criterio de Routh](Routh.ipynb)\n",
     "- [Diseño de controladores]()\n"
    ]
   },
