--- a/LGDR.ipynb
+++ b/LGDR.ipynb
@@ -160,7 +160,7 @@
    "source": [
     "# Se define la función de transferencia del proceso\n",
     "Gp = control.tf(1, [1,-1])\n",
-    "Gp\n"
+    "Gp"
    ]
   },
   {
@@ -173,96 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "98c7247b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db2ab1466206451a85ef6eb11f207d30",
+       "model_id": "eda57c7ff87a4e83ae0349abab06927f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=5.0, description='kc', max=10.0), Output()), _dom_classes=('widget-int…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.pzmap_k(kc)>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "visualizacion_s = [-10, 10, -5, 5]\n",
-    "visualizacion_t = [0, 10, -2, 2]\n",
-    "\n",
-    "pLA = Gp.pole()\n",
-    "cLA = Gp.zero()\n",
-    "_, yLA = control.step_response(Gp, ts)\n",
-    "\n",
-    "interact(pzmap_k, \n",
-    "         kc=(0., 10.))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3272554e",
-   "metadata": {},
-   "source": [
-    "¿Qué pasa con un sistema de segundo orden?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "de5fb1b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$$\\frac{2}{s^2 + 4 s + 1}$$"
-      ],
-      "text/plain": [
-       "TransferFunction(array([2]), array([1, 4, 1]))"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Se define la función de transferencia del proceso\n",
-    "Gp = control.tf(2, [1,4,1])\n",
-    "Gp\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "7f77ecd8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06d877a063244406bbcef0e703478804",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=2.5, description='kc', max=5.0), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(FloatSlider(value=0.0, description='kc', max=10.0, min=-10.0), Output()), _dom_classes=(…"
       ]
      },
      "metadata": {},
@@ -288,7 +211,84 @@
     "_, yLA = control.step_response(Gp, ts)\n",
     "\n",
     "interact(pzmap_k, \n",
-    "         kc=(0., 5.))"
+    "         kc=(-10., 10.))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3272554e",
+   "metadata": {},
+   "source": [
+    "¿Qué pasa con un sistema de segundo orden?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "de5fb1b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$\\frac{2}{s^2 + 4 s + 1}$$"
+      ],
+      "text/plain": [
+       "TransferFunction(array([2]), array([1, 4, 1]))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Se define la función de transferencia del proceso\n",
+    "Gp = control.tf(2, [1,4,1])\n",
+    "Gp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7f77ecd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8d8739673d86433d814e76fa4139cd2b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=5.0, description='kc', max=10.0), Output()), _dom_classes=('widget-int…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.pzmap_k(kc)>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "visualizacion_s = [-10, 10, -5, 5]\n",
+    "visualizacion_t = [0, 10, -2, 2]\n",
+    "\n",
+    "pLA = Gp.pole()\n",
+    "cLA = Gp.zero()\n",
+    "_, yLA = control.step_response(Gp, ts)\n",
+    "\n",
+    "interact(pzmap_k, \n",
+    "         kc=(0., 10.))"
    ]
   },
   {
@@ -312,14 +312,14 @@
     "\n",
     "Considere un sistema de orden 3.\n",
     "\n",
-    "$$G_p(s) = \\frac{2}{s \\left ( s^2 + 6s + 1\\right ) }$$\n",
+    "$$G_p(s) = \\frac{2}{s \\left ( s^2 + 3s + 2\\right ) }$$\n",
     "\n",
     "Construya el Lugar de las raíces."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "f4e5105d",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "TransferFunction(array([2]), array([1, 3, 2, 0]))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "1d3b75b8",
    "metadata": {},
    "outputs": [
@@ -382,14 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "94ee907e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51aae0fd48c94ef282f24bb716c33481",
+       "model_id": "ac4174af8bb3467f85daf509213ad8e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -406,7 +406,7 @@
        "<function __main__.rlocus_int(kc)>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
