--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -57,7 +57,7 @@
     "- [Efectos de la realimentación](EfectosLazoCerrado.ipynb)\n",
     "- [Lugar geométrico de las raíces](LGDR.ipynb)\n",
     "- [Criterio de Routh](Routh.ipynb)\n",
-    "- [Diseño de controladores]()\n"
+    "- [Error de estado estable](ErrorEstadoEstable.ipynb)\n"
    ]
   },
   {
