--- a/Routh.ipynb
+++ b/Routh.ipynb
@@ -78,6 +78,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "aac0f587",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.99999588+7.12759326e-06j, -0.99999588-7.12759326e-06j,\n",
+       "       -1.00000823+0.00000000e+00j])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(Gp*Gp*Gp).pole()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "107f6714",
    "metadata": {},
@@ -198,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "feda53f0",
    "metadata": {},
    "outputs": [
@@ -218,7 +240,7 @@
        "[                                                                                                                                                                                                                                                                                                                                                                                                           a_0,                                                          0,   0,   0]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,6 +265,30 @@
     "----------------------------------\n",
     "\n",
     "¿Qué pasa con el sistema de décimo orden definido anteriormente?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "93e27fd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\operatorname{Poly}{\\left( s^{10} + 10 s^{9} + 45 s^{8} + 120 s^{7} + 210 s^{6} + 252 s^{5} + 210 s^{4} + 120 s^{3} + 45 s^{2} + 10 s + 1, s, domain=\\mathbb{Z} \\right)}$"
+      ],
+      "text/plain": [
+       "Poly(s**10 + 10*s**9 + 45*s**8 + 120*s**7 + 210*s**6 + 252*s**5 + 210*s**4 + 120*s**3 + 45*s**2 + 10*s + 1, s, domain='ZZ')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Gp10Den"
    ]
   },
   {
@@ -361,26 +407,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "1b61497c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left(104.09924325141 < k_{c} \\vee k_{c} < 24.3017308778435\\right) \\wedge \\left(\\left(104.09924325141 < k_{c} \\wedge k_{c} < 203.14827879423\\right) \\vee k_{c} < 1.65172120576948\\right) \\wedge k_{c} < 24.3017308778435$"
+       "$\\displaystyle \\left(k_{c} > 104.09924325141 \\vee k_{c} < 1.65172120576948\\right) \\wedge \\left(k_{c} < 1.65172120576948 \\vee k_{c} < 203.14827879423\\right) \\wedge k_{c} < 24.3017308778435$"
       ],
       "text/plain": [
-       "(k_c < 24.3017308778435) & ((104.09924325141 < k_c) | (k_c < 24.3017308778435)) & ((k_c < 1.65172120576948) | ((104.09924325141 < k_c) & (k_c < 203.14827879423)))"
+       "(k_c < 24.3017308778435) & ((k_c > 104.09924325141) | (k_c < 1.65172120576948)) & ((k_c < 1.65172120576948) | (k_c < 203.14827879423))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sym.solve([e > 0 for e in A[:, 0]], kc)"
+    "sym.solve([e > 0 for e in A[:, 0]], kc).simplify()"
    ]
   },
   {
