--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -57,7 +57,9 @@
     "- [Efectos de la realimentación](EfectosLazoCerrado.ipynb)\n",
     "- [Lugar geométrico de las raíces](LGDR.ipynb)\n",
     "- [Criterio de Routh](Routh.ipynb)\n",
-    "- [Error de estado estable](ErrorEstadoEstable.ipynb)\n"
+    "- [Error de estado estable](ErrorEstadoEstable.ipynb)\n",
+    "- [Diseño de controladores mediante Lugar Geométrico de las Raíces](controlLGDR.ipynb)\n",
+    "\n"
    ]
   },
   {
