--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -50,22 +50,55 @@
    "id": "6a993173",
    "metadata": {},
    "source": [
-    "## 2  Control en tiempo continuo\n",
+    "## 2  Sistemas realimentados\n",
     "\n",
     "- [Bucle de control en tiempo continuo](Bucle_control.ipynb)\n",
     "- [Diagramas de bloques](Diagramas_bloques.ipynb)\n",
     "- [Efectos de la realimentación](EfectosLazoCerrado.ipynb)\n",
-    "- [Lugar geométrico de las raíces](LGDR.ipynb)\n",
+    "- [Error de estado estable](ErrorEstadoEstable.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d7cc94c",
+   "metadata": {},
+   "source": [
+    "## 3 Lugar geométrico de las raíces\n",
+    "\n",
+    "\n",
     "- [Criterio de Routh](Routh.ipynb)\n",
-    "- [Error de estado estable](ErrorEstadoEstable.ipynb)\n",
+    "- [Lugar geométrico de las raíces](LGDR.ipynb)\n",
     "- [Diseño de controladores mediante Lugar Geométrico de las Raíces](controlLGDR.ipynb)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e92b811",
+   "metadata": {},
+   "source": [
+    "## 4 PID\n",
+    "\n",
+    "\n",
+    "- [Análisis de la respuesta en frecuencia](Frecuencia.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d639fcd",
+   "metadata": {},
+   "source": [
+    "## 5 Análisis en frecuencia\n",
+    "\n",
+    "\n",
+    "- [Análisis de la respuesta en frecuencia](Frecuencia.ipynb)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "679c5a63",
+   "id": "56f51efb",
    "metadata": {},
    "outputs": [],
    "source": []
