--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -69,6 +69,7 @@
     "- [Criterio de Routh](Routh.ipynb)\n",
     "- [Lugar geométrico de las raíces](LGDR.ipynb)\n",
     "- [Diseño de controladores mediante Lugar Geométrico de las Raíces](controlLGDR.ipynb)\n",
+    "- [Ejercicio](LGDR-ejercicio.ipynb)\n",
     "\n"
    ]
   },
@@ -80,7 +81,8 @@
     "## 4 PID\n",
     "\n",
     "\n",
-    "- [Análisis de la respuesta en frecuencia](Frecuencia.ipynb)"
+    "- [Sintonización de controladores PID](PID.ipynb)\n",
+    "- [Ejercicio](PID-ejercicio.ipynb)\n"
    ]
   },
   {
