--- a/PID.ipynb
+++ b/PID.ipynb
@@ -42,7 +42,7 @@
     "# PID\n",
     "\n",
     "El controlador PID se compone de:\n",
-    "- Una acción Proporcional para prindar velocidad de respuesta y disminuir el error de estado estable\n",
+    "- Una acción Proporcional para brindar velocidad de respuesta y disminuir el error de estado estable\n",
     "- Una acción Integral para eliminar el error de estado estable\n",
     "- Una acción Derivativa para encargarse de errores cuando hay un cambio en el valor absoluto del error teniendo en cuenta que si el error es constante, solo actúan los modos proporcional e integral. \n",
     "\n",
@@ -155,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d8e25709e1b46dcb8b06f8a7edbc4aa",
+       "model_id": "fb3a8f3d0c044a3880005e4477200043",
        "version_major": 2,
        "version_minor": 0
       },
@@ -690,7 +690,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b422b54a93d4423979893327e829b1f",
+       "model_id": "7fcbc3b7be754afdb12cd4989339df9e",
        "version_major": 2,
        "version_minor": 0
       },
