--- a/LGDR.ipynb
+++ b/LGDR.ipynb
@@ -139,27 +139,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "63dddc2f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$$\\frac{1}{s - 1}$$"
+       "$$\\frac{1}{2 s + 1}$$"
       ],
       "text/plain": [
-       "TransferFunction(array([1]), array([ 1, -1]))"
+       "TransferFunction(array([1]), array([2, 1]))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Se define la función de transferencia del proceso\n",
-    "Gp = control.tf(1, [1,-1])\n",
+    "Gp = control.tf(1, [2,1])\n",
     "Gp"
    ]
   },
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "98c7247b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b6dbb58dcba4464b0d4c212d47c49d0",
+       "model_id": "48b73b80dd344d398e42627917f19622",
        "version_major": 2,
        "version_minor": 0
       },
@@ -197,7 +197,7 @@
        "<function __main__.pzmap_k(kc)>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "de5fb1b1",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "TransferFunction(array([2]), array([1, 4, 1]))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,14 +250,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "7f77ecd8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca2961121e4945a19f85651bc5afd5c8",
+       "model_id": "0f331dd464d648b58b9b00be51321ef2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -274,7 +274,7 @@
        "<function __main__.pzmap_k(kc)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "f4e5105d",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "TransferFunction(array([2]), array([1, 3, 2, 0]))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "1d3b75b8",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7af2e8058d854f7a8c456263155b4669",
+       "model_id": "b0de2fe732984f43b5176aea60ca6a0f",
        "version_major": 2,
        "version_minor": 0
       },
