--- a/Frecuencia_diseno.ipynb
+++ b/Frecuencia_diseno.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a29f8aad",
    "metadata": {},
    "outputs": [],
@@ -25,21 +25,35 @@
    "id": "3ad50e15",
    "metadata": {},
    "source": [
-    "# Respuesta en frecuencia\n",
+    "# Diseño de compensadores a partir de la respuesta en frecuencia\n",
     "\n",
-    "La respuesta en frecuencia de un sistema hace referencia a cómo reacciona en estado estacionario ante entradas sinoidales. Analizar dicha respuesta para sistemas en lazo abierto permite determinar estabilidad de los mismos en lazo cerrado. Para analizar la respuesta en frecuencia desde la función de transferencia en el dominio de Laplace se elimina la parte real de la variable $s$.\n",
     "\n",
-    "La función de transferencia de lazo cerrado es\n",
+    "## Compensador en adelanto\n",
     "\n",
-    "$$\\frac{G(s)}{1+G(s)}$$\n",
+    "La función del compensador es modificar la respuesta en frecuencia para agregar un ángulo de adelanto apropiado para acomodar la fase propia de la planta.\n",
     "\n",
-    "Como interesa que $s = j\\omega$, la expresión queda:\n",
+    "Suponga la forma de un compensador:\n",
+    "\\begin{align}\n",
+    "G_c(s) &= k_c\\frac{s+\\frac{1}{T}}{s+\\frac{1}{\\alpha T}}\\\\\n",
+    "&= \\underbrace{K_c \\alpha}_K \\frac{T s+1}{\\alpha T s + 1}\\\\\n",
+    "&= K \\frac{T s+1}{\\alpha T s + 1}\n",
+    "\\end{align}\n",
     "\n",
-    "$$\\frac{G(j\\omega)}{1+G(j\\omega)}$$\n",
+    "Por lo que la función de transferencia de lazo abierto es:\n",
     "\n",
-    "Para verificar la estabilidad del sistema en lazo cerrado, debe verificarse que \n",
+    "$$G_c(s)G_p(s) =  \\frac{T s+1}{\\alpha T s + 1} \\underbrace{K  G_p(s)}_{G_I(s)} $$\n",
     "\n",
-    "$$ |G(j\\omega_{\\pi})| < 1 \\; \\text{cuando} \\; \\angle G(j\\omega_{\\pi}) = \\pi $$"
+    "Defina un valor $K$ para satisfacer una constante estática de error y genere el diagrama de Bode de $G_I(s)$ respectivo.\n",
+    "\n",
+    "Determine el margen de fase.  \n",
+    "\n",
+    "Encuentre el ángulo de fase requerido para cumplir con las espectativas del sistema y añada $5°-12°$.\n",
+    "\n",
+    "Halle $\\alpha$ con:\n",
+    "\n",
+    "$$\\sin \\phi_m = \\frac{1-'alpha}{1+\\alpha}$$\n",
+    "\n",
+    "Encuentre la frecuencia para la cual $|G_I(s)|=-20 \\log_{10} \\frac{1}{\\sqrt{\\alpha}}$. Esta es la nueva frecuencia de cruce de ganancia $\\omega_m = \\frac{1}{\\sqrt{\\alpha}}$, donde ocurre también la fase máxima.3"
    ]
   },
   {
@@ -64,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b11bc727",
    "metadata": {},
    "outputs": [],
@@ -75,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d354e2d4",
    "metadata": {},
    "outputs": [],
@@ -100,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "371e8e97",
    "metadata": {},
    "outputs": [],
@@ -127,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "6915c5eb",
    "metadata": {},
    "outputs": [
@@ -166,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "4dba43c1",
    "metadata": {},
    "outputs": [
@@ -205,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "983073e5",
    "metadata": {},
    "outputs": [
@@ -248,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "810aa54d",
    "metadata": {},
    "outputs": [],
@@ -273,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "28044fd9",
    "metadata": {},
    "outputs": [
@@ -312,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "b491c274",
    "metadata": {},
    "outputs": [
@@ -351,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "c2dde86b",
    "metadata": {},
    "outputs": [
@@ -401,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "9169f05f",
    "metadata": {},
    "outputs": [],
@@ -411,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "18592039",
    "metadata": {},
    "outputs": [],
@@ -429,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "9abdfab0",
    "metadata": {},
    "outputs": [
@@ -442,7 +456,7 @@
        "TransferFunction(array([1]), array([1., 1., 1.]))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "9499a356",
    "metadata": {},
    "outputs": [
@@ -501,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "812693c5",
    "metadata": {
     "scrolled": true
@@ -534,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "4a25f8ef",
    "metadata": {},
    "outputs": [
@@ -565,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "fc07c8a2",
    "metadata": {
     "scrolled": true
@@ -590,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "id": "4f2e71d6",
    "metadata": {},
    "outputs": [
