--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -98,9 +98,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1054c6cd",
+   "metadata": {},
+   "source": [
+    "## 6 Espacio de estados\n",
+    "- [Modelos en espacios de estados](EspacioEstados.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56f51efb",
+   "id": "d0406631",
    "metadata": {},
    "outputs": [],
    "source": []
