--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -54,6 +54,7 @@
     "\n",
     "- [Bucle de control en tiempo continuo](Bucle_control.ipynb)\n",
     "- [Diagramas de bloques](Diagramas_bloques.ipynb)\n",
+    "- [Ejercicio: Diagramas de bloques](Diagramas_bloques.ipynb)\n",
     "- [Efectos de la realimentación](EfectosLazoCerrado.ipynb)\n",
     "- [Error de estado estable](ErrorEstadoEstable.ipynb)\n"
    ]
