--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -56,6 +56,7 @@
     "- [Diagramas de bloques](Diagramas_bloques.ipynb)\n",
     "- [Ejercicio: Diagramas de bloques](EjercicioBloques.ipynb)\n",
     "- [Efectos de la realimentación](EfectosLazoCerrado.ipynb)\n",
+    "- [Ejercicio: Efectos de la realimentación](Ejercicio_EfectoLC.ipynb)\n",
     "- [Error de estado estable](ErrorEstadoEstable.ipynb)\n"
    ]
   },
