--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -42,7 +42,8 @@
     "- [Generalidades de la transformada de Laplace](Transformada_Laplace.ipynb)\n",
     "- [Respuesta dinámica](RespuestaDinamica.ipynb)\n",
     "- [Simulación de funciones de transferencia arbitrarias](Simulacion.ipynb)\n",
-    "- [Identificación de sistemas](Identificacion.ipynb)"
+    "- [Identificación de sistemas](Identificacion.ipynb)\n",
+    "- [Ejercicio: Identificación de sistemas](Ejercicio_Identificacion.ipynb)"
    ]
   },
   {
