--- a/Ejercicio_Identificacion.ipynb
+++ b/Ejercicio_Identificacion.ipynb
@@ -59,12 +59,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0c8d453f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>temperatureSensor.T</th>\n",
+       "      <th>step.y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.2</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.3</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.4</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>99.7</td>\n",
+       "      <td>96.842186</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>99.8</td>\n",
+       "      <td>96.842201</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1001</th>\n",
+       "      <td>99.9</td>\n",
+       "      <td>96.842215</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1002</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>96.842230</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1003</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>96.842230</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1004 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       time  temperatureSensor.T  step.y\n",
+       "0       0.0            20.000000       0\n",
+       "1       0.1            20.000000       0\n",
+       "2       0.2            20.000000       0\n",
+       "3       0.3            20.000000       0\n",
+       "4       0.4            20.000000       0\n",
+       "...     ...                  ...     ...\n",
+       "999    99.7            96.842186       1\n",
+       "1000   99.8            96.842201       1\n",
+       "1001   99.9            96.842215       1\n",
+       "1002  100.0            96.842230       1\n",
+       "1003  100.0            96.842230       1\n",
+       "\n",
+       "[1004 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Escriba su codigo"
+    "# Escriba su codigo\n",
+    "import pandas as pd\n",
+    "a = pd.read_csv('Datos\\DatosResistTemp.csv')\n",
+    "a"
    ]
   },
   {
