--- a/Bucle_control.ipynb
+++ b/Bucle_control.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "En este diagrama se observa un bucle (bucla o lazo) típico de control que sirve como orientación a la hora de automatizar procesos.\n",
     "\n",
-    "![bucle](figuras/bucle.PNG)\n",
+    "![bucle](figuras/bucle.png)\n",
     "\n",
     "- La **planta** es el proceso que se debe controlar.\n",
     "- El **actuador** cambia el comportamiento de la planta a partir de las ordenes del **controlador**.\n",
