--- a/EfectosLazoCerrado.ipynb
+++ b/EfectosLazoCerrado.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "Tomando como base el bucle típico de control de la siguiente figura.\n",
     "\n",
-    "![bucle](figuras/bucle_Laplace.PNG)\n",
+    "![bucle](figuras/bucle_Laplace.png)\n",
     "\n",
     "Puede deducirse que la función de transferencia desde la **referencia** $R(s)$ hasta la **controlada** $C(s)$.\n",
     "\n",
