--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -43,7 +43,8 @@
     "- [Respuesta dinámica](RespuestaDinamica.ipynb)\n",
     "- [Simulación de funciones de transferencia arbitrarias](Simulacion.ipynb)\n",
     "- [Identificación de sistemas](Identificacion.ipynb)\n",
-    "- [Ejercicio: Identificación de sistemas](Ejercicio_Identificacion.ipynb)"
+    "- [Ejercicio: Identificación de sistemas](Ejercicio_Identificacion.ipynb)\n",
+    "- [Ejercicio: Identificación de sistemas en laboratorio](CapturaDatosPLC_Siemens.ipynb)"
    ]
   },
   {
