--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -73,8 +73,8 @@
     "- [Criterio de Routh](Routh.ipynb)\n",
     "- [Lugar geométrico de las raíces](LGDR.ipynb)\n",
     "- [Diseño de controladores mediante Lugar Geométrico de las Raíces](controlLGDR.ipynb)\n",
-    "- [Ejercicio](LGDR-ejercicio.ipynb)\n",
-    "\n"
+    "- [Ejercicio: Lugar geométrico de las raíces en modelos](LGDR-ejercicio.ipynb)\n",
+    "- [Ejercicio: Lugar geométrico de las raíces en laboratorio](LGDR_PLC_Siemens.ipynb)\n"
    ]
   },
   {
