--- a/LGDR_PLC_Siemens-Copy1.ipynb
+++ b/LGDR_PLC_Siemens-Copy1.ipynb
@@ -763,15 +763,21 @@
     "##\n",
     "\n",
     "y = []\n",
+    "y1 = [0]\n",
     "e = []\n",
+    "e_t1 = 0\n",
     "u = []\n",
+    "u1 = [0]\n",
+    "\n",
     "print('Para abortar el experimento presione ESPACIO')\n",
     "abortado = False\n",
     "for idt,ti in enumerate(t):\n",
     "    ref_t = r[idt] # Valor de referencia\n",
     "    y_t = leerPresionPLCIW96() # Salda del sistema\n",
     "    e_t = ref_t - y_t # error\n",
-    "    u_t = k*e_t  # Señal de salida del controlador\n",
+    "    de = (e_t - e_t1)/tm\n",
+    "    \n",
+    "    u_t = k*e_t + de # Señal de salida del controlador\n",
     "    BombaQW80(u_t) # Salida hacia actuador\n",
     "    y.append(y_t)\n",
     "    e.append(e_t)\n",
@@ -786,8 +792,8 @@
     "        AbrirValvulaQW96(0)\n",
     "        \n",
     "        break\n",
-    "    time.sleep(tm)\n",
-    "    \n",
+    "    time.sleep(tm) # Espera el tm\n",
+    "    e_t1 = e_t # Actualiza valores anteriores\n",
     "if abortado:\n",
     "    y = y + [np.nan]*(len(r)-len(y))\n",
     "    e = e + [np.nan]*(len(r)-len(e))\n",
