--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -86,7 +86,8 @@
     "\n",
     "\n",
     "- [Sintonización de controladores PID](PID.ipynb)\n",
-    "- [Ejercicio](PID-ejercicio.ipynb)\n"
+    "- [Ejercicio: PID en modelos](PID-ejercicio.ipynb)\n",
+    "- [Ejercicio: PID en laboratorio](PID_PLC_Siemens.ipynb)\n"
    ]
   },
   {
