--- a/PID_PLC_Siemens.ipynb
+++ b/PID_PLC_Siemens.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "25964de8",
    "metadata": {
     "scrolled": true
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "1068da4a",
    "metadata": {
     "scrolled": false
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "0f3263de",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "id": "75ee6d0b",
    "metadata": {},
    "outputs": [],
@@ -152,12 +152,16 @@
     "\n",
     "def AbrirValvulaQW96(valvulap):\n",
     "    # Abre la valvula en QW96 a un porcentaje determinado\n",
+    "    valvulap = max([0,valvulap])\n",
+    "    valvulap = min([valvulap,100])\n",
     "    valvula = ((7800 / 71.5) * (valvulap - 7.4)) + 6200\n",
     "    escr_sal_ent(96,valvula)\n",
     "    \n",
     "\n",
     "def BombaQW80(motobombaHz):\n",
     "    #Poner bomba en 60Hz salida QW80\n",
+    "    motobombaHz = max([0,motobombaHz])\n",
+    "    motobombaHz = min([motobombaHz,60]) \n",
     "    motobomba = motobombaHz * (22118 / 60) + 5530\n",
     "    escr_sal_ent(80,motobomba)\n",
     "\n",
@@ -254,8 +258,8 @@
    "source": [
     "escr_sal_bool(0,5,1) #Habilitar RUN motobomba\n",
     "# Complete para establecer un punto de operación\n",
-    "BombaQW80(60)\n",
-    "AbrirValvulaQW96(20)"
+    "BombaQW80(20)\n",
+    "AbrirValvulaQW96(100)"
    ]
   },
   {
@@ -338,18 +342,21 @@
    "outputs": [],
    "source": [
     "# Define los parámetros del controlador\n",
-    "kp,Ti,Td = 1,1,1\n",
+    "kc,Ti,Td = 1,1,1\n",
     "## Inicia listas para salida y(t) , error e(t) , señal de control u(t)\n",
     "y,e,u = ([],[],[])\n",
-    "e3,e2,e1 = (0,0,0)\n",
+    "e3,e2,e1,Inte = (0,0,0,0)\n",
     "print('Para abortar el experimento presione ESPACIO')\n",
     "for idt,ti in enumerate(t):\n",
     "    ref_t = r[idt] # Referencia en instante  actual\n",
     "    y_t = leerPresionPLCIW96() # Salida del sistema en instante actual\n",
     "    e_t = ref_t - y_t # Error  en instante actual\n",
+    "    Inte = e_t*tm + Inte\n",
+    "    dedt = (e_t - e1)/tm\n",
     "    ## Estrategia de control\n",
     "    # modifique la estrategia de control\n",
-    "    u_t = k*e_t  # Señal de control en instante actual\n",
+    "    u_t = kc*(e_t + (1/Ti)*Inte + Td*dedt) \n",
+    "    # Señal de control en instante actual\n",
     "    ##\n",
     "    # actualiza datos de error\n",
     "    e3,e2,e1 = (e2,e1,e_t)\n",
@@ -388,7 +395,7 @@
     "df = pd.DataFrame(data={'Tiempo': t, 'Referencia': r, \n",
     "                        'Error': e, 'Señal de control': u,\n",
     "                        'Salida': y })\n",
-    "archivo = \"Datos/Nombre\" + str(k) + \".csv\"\n",
+    "archivo = \"Datos/Nombre\" + \".csv\"\n",
     "df.to_csv(archivo, index=False)"
    ]
   },
