--- a/LGDR.ipynb
+++ b/LGDR.ipynb
@@ -71,6 +71,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "385ed362",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.4'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sympy as sym\n",
+    "sym.__version__"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c0fbdab3",
    "metadata": {},
