--- a/CircuitoRLC.ipynb
+++ b/CircuitoRLC.ipynb
@@ -13,13 +13,25 @@
    "execution_count": 1,
    "id": "3e1323e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.4'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sympy as sym\n",
     "sym.init_printing()\n",
     "import matplotlib.pyplot as plt\n",
     "#%matplotlib inline\n",
-    "#%matplotlib notebook\n"
+    "#%matplotlib notebook\n",
+    "sym.__version__"
    ]
   },
   {
@@ -865,11 +877,51 @@
    "version": "3.7.3"
   },
   "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
    "bibliofile": "biblio.bib",
    "cite_by": "apalike",
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
-   "eqNumInitial": 0
+   "eqNumInitial": 0,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
