--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -38,6 +38,8 @@
     "## 1  Modelos dinámicos en tiempo continuo\n",
     "\n",
     "- [Modelo dinámico de un circuito RLC](CircuitoRLC.ipynb)\n",
+    "- [Modelo dinámico de un sistema mecánico](Mecanico.ipynb)\n",
+    "- [Modelo dinámico de un sistema de nivel](Fluidos.ipynb)\n",
     "- [Ejercicio: Análisis de un circuito con almacenamiento de energía](EjercicioCircuito.ipynb)\n",
     "- [Generalidades de la transformada de Laplace](Transformada_Laplace.ipynb)\n",
     "- [Respuesta dinámica](RespuestaDinamica.ipynb)\n",
