--- a/Fluidos.ipynb
+++ b/Fluidos.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9acd0757",
+   "id": "9d9a4773",
    "metadata": {},
    "source": [
     "### Resistencia y capacitancia\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4522f0f",
+   "id": "52c8e41d",
    "metadata": {},
    "source": [
     "Si el flujo es turbulento, se considera\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93d1dbd1",
+   "id": "0187a323",
    "metadata": {},
    "source": [
     "La capacitancia $C$ del tanque se define como el cambio que se necesita en la cantidad de líquido en el tanque para que se genere un cambio de una unidad en el potencial (altura).\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9eef0c6",
+   "id": "5696b636",
    "metadata": {},
    "source": [
     "Considere las variables:\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7159155",
+   "id": "071b85d4",
    "metadata": {},
    "source": [
     "El modelo se obtiene así:\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37e29f83",
+   "id": "3b80a620",
    "metadata": {},
    "source": [
     "Considerando que $h$ es la señal de salida y $q_i$ es la señal de entrada, puede obtenerse la función de transferencia del sistema."
@@ -140,13 +140,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "928add84",
+   "id": "67f6cd9e",
    "metadata": {},
    "source": [
     "**Ejercicio**\n",
     "\n",
     "Simule con distintos valores de $R$ y $C$.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6117b104",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sym"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51b40167",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sym.diff()"
    ]
   }
  ],
