--- a/EfectosLazoCerrado.ipynb
+++ b/EfectosLazoCerrado.ipynb
@@ -18,7 +18,7 @@
    "id": "c0fbdab3",
    "metadata": {},
    "source": [
-    "# Efectos del lazo cerrado\n",
+    "# Efectos de la realimentación\n",
     "\n",
     "## Objetivos\n",
     "- Determinar la estabilidad de sistemas de lazo abierto y lazo cerrado.\n",
@@ -784,7 +784,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -798,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
