--- a/SympyJupyter.ipynb
+++ b/SympyJupyter.ipynb
@@ -1140,7 +1140,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1154,7 +1154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.9"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
