--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -124,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
