--- a/ErrorEstadoEstable.ipynb
+++ b/ErrorEstadoEstable.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "63dddc2f",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "TransferFunction(array([1]), array([5, 1]))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1167,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1181,7 +1181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
