--- a/Indice.ipynb
+++ b/Indice.ipynb
@@ -37,13 +37,14 @@
    "source": [
     "## 1  Modelos dinámicos en tiempo continuo\n",
     "\n",
+    "- [Generalidades de la transformada de Laplace](Transformada_Laplace.ipynb)\n",
+    "- [Respuesta dinámica](RespuestaDinamica.ipynb)\n",
+    "- [Simulación de funciones de transferencia arbitrarias](Simulacion.ipynb)\n",
     "- [Modelo dinámico de un circuito RLC](CircuitoRLC.ipynb)\n",
     "- [Modelo dinámico de un sistema mecánico](Mecanico.ipynb)\n",
     "- [Modelo dinámico de un sistema de nivel](Fluidos.ipynb)\n",
     "- [Ejercicio: Análisis de un circuito con almacenamiento de energía](EjercicioCircuito.ipynb)\n",
-    "- [Generalidades de la transformada de Laplace](Transformada_Laplace.ipynb)\n",
-    "- [Respuesta dinámica](RespuestaDinamica.ipynb)\n",
-    "- [Simulación de funciones de transferencia arbitrarias](Simulacion.ipynb)\n",
+    "- [Ejercicio: Analisis de un sistema mecánico](Ejercicio_mecanico.ipynb)\n",
     "- [Identificación de sistemas](Identificacion.ipynb)\n",
     "- [Ejercicio: Identificación de sistemas](Ejercicio_Identificacion.ipynb)\n",
     "- [Ejercicio: Identificación de sistemas en laboratorio](CapturaDatosPLC_Siemens.ipynb)"
@@ -146,6 +147,19 @@
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
