--- a/Fluidos.ipynb
+++ b/Fluidos.ipynb
@@ -156,23 +156,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy as sym"
+    "import sympy as sym\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "51b40167",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle C$"
+      ],
+      "text/plain": [
+       "C"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R, C = sym.symbols('R C')\n",
+    "C"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51b40167",
+   "id": "093f362f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "sym.diff()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -186,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -205,6 +228,19 @@
    "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
